--- a/simple-project/pom.xml
+++ b/simple-project/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.konohiroaki</groupId>
+    <groupId>com.citi.cpb.perf.annotation</groupId>
     <artifactId>simple-project</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -14,7 +14,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.konohiroaki</groupId>
+            <groupId>com.citi.cpb.perf.annotation</groupId>
             <artifactId>annotation-processor</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
